--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,38 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+
+    ext {
+        kotlin_version = '1.3.21'
+        support_version = '28.0.0-rc02'
+        room_version = '1.1.1'
+        arch_comp_version = '1.1.1'
+        playServices = '15.0.0'
+        rxkotlin = '2.2.0'
+        rxAndroid = '2.1.0'
+        rxJava = '2.1.6'
+        koin = '2.0.1'
+        arch = '2.1.0-alpha03'
+        epoxy = '3.7.0'
+        butterknife ='10.1.0'
+        loggingInterceptor = "3.10.0"
+        retrofit = "2.6.0"
+        rxBinding= '2.2.0'
+        material = '1.0.0-rc01'
+        support = '28.0.0'
+    }
+
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +42,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
 }
 
