--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "org.cnzd.najboljija"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,27 @@ kapt {
     correctErrorTypes = true
 }
 
+ext {
+    kotlin_version = '1.3.21'
+    support_version = '28.0.0-rc02'
+    room_version = '1.1.1'
+    arch_comp_version = '1.1.1'
+    playServices = '19.0.0'
+    rxkotlin = '2.2.0'
+    rxAndroid = '2.1.0'
+    rxJava = '2.1.6'
+    koin = '2.0.1'
+    arch = '2.1.0-alpha03'
+    epoxy = '3.7.0'
+    loggingInterceptor = "3.10.0"
+    retrofit = "2.6.0"
+    rxBinding= '2.2.0'
+    material = '1.0.0-rc01'
+    support = '28.0.0'
+    firebase_core = '17.1.0'
+}
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -42,7 +63,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -51,14 +71,13 @@ dependencies {
     implementation"com.google.android.material:material:$material}"
 
     // ViewModel and LiveData
-
     implementation "androidx.lifecycle:lifecycle-viewmodel:$arch"
 
-
     //Firebase
-    implementation "com.google.firebase:firebase-core:$playServices"
+    implementation "com.google.firebase:firebase-core:$firebase_core"
     implementation "com.google.firebase:firebase-auth:$playServices"
-    implementation "com.google.firebase:firebase-database:$playServices"
+    implementation "com.google.firebase:firebase-storage:$playServices"
+
 
     //Rx
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin"
@@ -81,7 +100,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
 
-
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
