--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="org.cnzd.najboljija">
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:name=".App"
@@ -12,8 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.login.activity.LoginActivity"
             android:screenOrientation="portrait">
@@ -32,9 +35,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".ui.introduction.activity.IntroductionActivity">
-            android:windowSoftInputMode="adjustResize"
-        </activity>
+        <activity android:name=".ui.introduction.activity.IntroductionActivity" />
+        <activity android:name=".ui.photo_challenge.activity.PhotoChallengeActivity" />
+        <activity android:name=".ui.upside_down_challenge.activity.UpsideDownChallengeActivity" />
+
     </application>
 
 </manifest>
